Use overflow-wrap instead of word-wrap, fix abstract issues Stuart's found.

--- a/scss/partials/_stream_item.scss
+++ b/scss/partials/_stream_item.scss
@@ -307,6 +307,7 @@ div.stream-item {
             margin-right: 8px;
             margin-left: 6px;
             overflow: visible;
+            white-sapce: nowrap;
 
             &:before {
               content: "";
@@ -321,7 +322,6 @@ div.stream-item {
 
             @include mobile() {
               display: block;
-              white-space: nowrap;
               float: left;
               line-height: 24px;
             }
@@ -548,7 +548,12 @@ div.stream-item {
         overflow: hidden;
         text-overflow: ellipsis;
         max-width: 100%;
-        white-space: nowrap;
+
+        @include mobile() {
+          margin-top: 2px;
+          height: 23px;
+          @include activity-title(18px, 23px);
+        }
       }
 
       div.stream-item-body {
@@ -557,8 +562,6 @@ div.stream-item {
         @include OC_Body_Book();
         line-height: 22px;
         overflow: hidden;
-        white-space: pre-wrap;
-        word-break: break-word;
 
         max-height: #{22 * 2}px;
 
